[project]
name = "unmhtml"
version = "0.1.0"
description = "MHTML to HTML converter library using Python stdlib"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "Johan Schuijt"}
]
license = {text = "MIT"}
homepage = "https://github.com/resolve-works/unmhtml"
repository = "https://github.com/resolve-works/unmhtml"
keywords = ["mhtml", "html", "converter", "mime", "web", "archive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unmhtml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.12.7",
]
